# lingo

./: .gitmodules  CMakeLists.txt  LICENSE
include/: collections.hpp  dict_types.hpp  parser.hpp  utils.hpp  xhtml_converter.hpp
qml/: Collections.qml  Main.qml  Vocab.qml  VocabList.qml
src/: collections.cpp  dict_types.cpp  main.cpp  parser.cpp  xhtml_converter.cpp
